// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeField render should render properly with min props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TimeField
    disabled={false}
    handleKeyPress={[Function]}
    mode="hours"
    onChange={[Function]}
    onFocus={[MockFunction]}
    referenceHour={9}
    shouldHaveFocus={false}
    tabIndex={0}
    value=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <input
          className="hours"
          disabled={false}
          id="hours_12345"
          max="23"
          min={0}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          placeholder="0"
          tabIndex={1}
          type="number"
          value=""
        />,
        <SuggestionBox
          mode="hours"
          onChoose={[Function]}
          referenceHour={9}
          show={false}
        />,
      ],
      "className": "field",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "hours",
          "disabled": false,
          "id": "hours_12345",
          "max": "23",
          "min": 0,
          "onBlur": [Function],
          "onChange": [Function],
          "onFocus": [Function],
          "onKeyUp": [Function],
          "placeholder": "0",
          "tabIndex": 1,
          "type": "number",
          "value": "",
        },
        "ref": [Function],
        "rendered": null,
        "type": "input",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "mode": "hours",
          "onChoose": [Function],
          "referenceHour": 9,
          "show": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <input
            className="hours"
            disabled={false}
            id="hours_12345"
            max="23"
            min={0}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyUp={[Function]}
            placeholder="0"
            tabIndex={1}
            type="number"
            value=""
          />,
          <SuggestionBox
            mode="hours"
            onChoose={[Function]}
            referenceHour={9}
            show={false}
          />,
        ],
        "className": "field",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "hours",
            "disabled": false,
            "id": "hours_12345",
            "max": "23",
            "min": 0,
            "onBlur": [Function],
            "onChange": [Function],
            "onFocus": [Function],
            "onKeyUp": [Function],
            "placeholder": "0",
            "tabIndex": 1,
            "type": "number",
            "value": "",
          },
          "ref": [Function],
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "mode": "hours",
            "onChoose": [Function],
            "referenceHour": 9,
            "show": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`TimeField render should render properly with min props 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TimeField
    disabled={false}
    handleKeyPress={[Function]}
    mode="minutes"
    onChange={[Function]}
    onFocus={[MockFunction]}
    referenceHour={9}
    shouldHaveFocus={true}
    tabIndex={0}
    value=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <input
          className="minutes"
          disabled={false}
          id="minutes_12345"
          max="59"
          min={0}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          placeholder="00"
          tabIndex={1}
          type="number"
          value=""
        />,
        <SuggestionBox
          mode="minutes"
          onChoose={[Function]}
          referenceHour={9}
          show={false}
        />,
      ],
      "className": "field",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "minutes",
          "disabled": false,
          "id": "minutes_12345",
          "max": "59",
          "min": 0,
          "onBlur": [Function],
          "onChange": [Function],
          "onFocus": [Function],
          "onKeyUp": [Function],
          "placeholder": "00",
          "tabIndex": 1,
          "type": "number",
          "value": "",
        },
        "ref": [Function],
        "rendered": null,
        "type": "input",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "mode": "minutes",
          "onChoose": [Function],
          "referenceHour": 9,
          "show": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <input
            className="minutes"
            disabled={false}
            id="minutes_12345"
            max="59"
            min={0}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyUp={[Function]}
            placeholder="00"
            tabIndex={1}
            type="number"
            value=""
          />,
          <SuggestionBox
            mode="minutes"
            onChoose={[Function]}
            referenceHour={9}
            show={false}
          />,
        ],
        "className": "field",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "minutes",
            "disabled": false,
            "id": "minutes_12345",
            "max": "59",
            "min": 0,
            "onBlur": [Function],
            "onChange": [Function],
            "onFocus": [Function],
            "onKeyUp": [Function],
            "placeholder": "00",
            "tabIndex": 1,
            "type": "number",
            "value": "",
          },
          "ref": [Function],
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "mode": "minutes",
            "onChoose": [Function],
            "referenceHour": 9,
            "show": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
